Add notebook code for matplot lib lab section

--- a/src/chapter_2.ipynb
+++ b/src/chapter_2.ipynb
@@ -415,6 +415,185 @@
     "# Alternative row-wise mean\n",
     "X.mean(0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.4 Graphics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "x = rng.standard_normal(100)\n",
+    "y = rng.standard_normal(100)\n",
+    "ax.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unpacking figure and axis\n",
+    "output = plt.subplots(figsize=(8, 8))\n",
+    "fig = output[0]\n",
+    "ax = output[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changing markers\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "ax.plot(x, y, \"o\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scatter function\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "ax.scatter(x, y, marker=\"o\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scatter function without semicolon\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "ax.scatter(x, y, marker=\"o\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Titling and axes labelling\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "ax.scatter(x, y, marker=\"o\")\n",
+    "ax.set_xlabel(\"this is the x-axis\")\n",
+    "ax.set_ylabel(\"this is the y-axis\")\n",
+    "ax.set_title(\"Plot of X vs Y\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change figure size\n",
+    "fig.set_size_inches(12, 3)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multiple subplots\n",
+    "fig, axes = plt.subplots(nrows=2, ncols=3, figsize=(15, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cherry picking subplots\n",
+    "axes[0, 1].plot(x, y, \"o\")\n",
+    "axes[1, 2].scatter(x, y, marker=\"+\")\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save figures\n",
+    "fig.savefig(r\"..\\assets\\Figure.png\", dpi=400)\n",
+    "fig.savefig(r\"..\\assets\\Figure.pdf\", dpi=200);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Continued modification\n",
+    "axes[0, 1].set_xlim([-1, 1])\n",
+    "fig.savefig(r\"..\\assets\\Figure_updated.jpg\")\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Contour plot\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "x = np.linspace(-np.pi, np.pi, 50)\n",
+    "y = x\n",
+    "f = np.multiply.outer(np.cos(y), 1 / (1 + x**2))\n",
+    "ax.contour(x, y, f);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Increase levels\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "ax.contour(x, y, f, levels=45);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Image and heatmap plottin\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "ax.imshow(f);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.6 Sequences and Slice Notation"
+   ]
   }
  ],
  "metadata": {
