--- a/src/chapter_2.ipynb
+++ b/src/chapter_2.ipynb
@@ -1289,6 +1289,62 @@
     "auto[\"cylinders\"].describe()\n",
     "auto[\"mpg\"].describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.4 Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 1**\n",
+    "\n",
+    "(a) Flexible. An extremely large $n$ creates a more stable model trained on more data.\n",
+    "\n",
+    "(b) Inflexible. A small $n$ means fewer training examples, so an inflexible method will make less assumptions about the model from the training data.\n",
+    "\n",
+    "(c) Flexible. The flexible model will be able to capture the highly non-linear model.\n",
+    "\n",
+    "(d) Inflexible. Very high variance means flexible models will capture data features that only exist due to variance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 2**\n",
+    "\n",
+    "(a) Regression. Inference. $n = 500, p = 3$\n",
+    "\n",
+    "(b) Classification. Prediction. $n = 20, p = 13$\n",
+    "\n",
+    "(c) Regression. Prediction. $n = 52, p = 3$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 3**\n",
+    "\n",
+    "(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "img = plt.imread(r\"..\\assets\\3a.png\")\n",
+    "plt.imshow(img)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
