Finish chapter 2 conceptual questions

--- a/src/chapter_2.ipynb
+++ b/src/chapter_2.ipynb
@@ -6277,6 +6277,67 @@
     "- As flexibility increases, the training error decreases, as we are fitting our model exactly to the distribution of only the training data.\n",
     "- As flexibility increases, the test error decreases and then increases, as we begin by learning a more accurate model, but eventually training causes the model to overfit."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 4**\n",
+    "\n",
+    "(a)\n",
+    "- Is a plant dead or alive? Response is dead or alive. Predictors could be moisture levels, leaf colour, and leaf density. The goal would be inference, as we want to find out what causes plant death.\n",
+    "- Is a facial expression happy or sad? Response is happy or sad. Predictors could be muscle alignment, lip contortion, eye expression. The goal would be prediction, as we want to identify faces that are either happy or sad.\n",
+    "- What is the colour of a bell pepper? Response is red, yellow, or green. Predictors could be plant age, pepper size, pepper taste. The goal would be prediction, as we want to predict the pepper colour.\n",
+    "\n",
+    "(b)\n",
+    "- Phone charging speed. Response is the phone charge percentage gained per unit time. Predictors could be charger wattage, phone model, charging cable. The goal could be inference, as we want to find out what affects charging speed the most.\n",
+    "- Number of likes on a YouTube videos. Response is the number of likes on YouTube videos. Predictors could be channel subscribers, previous likes, and content category. The goal could be prediction, as we want to predict if the video would get many likes.\n",
+    "- UV index. Response is the UV index of a specific day. Predictors could be temperature, cloud cover, rainfall. The goal could be prediction, as we want to predict the UV index for a specific day.\n",
+    "\n",
+    "(c)\n",
+    "- Clustering students based on online engagement.\n",
+    "- Clustering voters based on political beliefs.\n",
+    "- Clutering plants based on physical characteristics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 5**\n",
+    "\n",
+    "The advantages of using a very flexible approach for regression or classification is that it may more accurately model complex distributions. A disadvantage of a very flexible approach is that the model may have high variance as it overfits to data more aggressively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 6**\n",
+    "\n",
+    "Parametric approaches make assumptions about the functional form of the data distribution. Non-parametric approaches make no assumptions about the function form of the data distribution and aim to directly model the training data. An advantage of parametric approaches is that they are less flexible and are therefore better at modelling simpler distributions. A disadvantage of parametric approaches is that some detail is often lost due to said over simplification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 7**\n",
+    "\n",
+    "(a)\n",
+    "1. $3$\n",
+    "2. $2$\n",
+    "3. $\\sqrt{10}$\n",
+    "4. $\\sqrt{5}$\n",
+    "5. $\\sqrt{2}$\n",
+    "6. $\\sqrt{3}$\n",
+    "\n",
+    "(b) Green, as the closest point is point 5.\n",
+    "\n",
+    "(c) Red, as the three closest points are point 2, point 5, and point 6, with responses red, green, red respectively. Majority voting results in red.\n",
+    "\n",
+    "(d) The best value for $K$ would be small, as using a smaller $K$ means fewer points are considered, and a more complex decision boundary occurs, more likely to closely match the Bayes decision boundary."
+   ]
   }
  ],
  "metadata": {
